[package]
name = "prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.7"
async-std = { version = "1.12", features = ["attributes", "unstable"] }
async-trait = "0.1"
futures = "0.3.28"
futures-util = "0.3.29"

env_logger = "0.10.0"

libp2p = { version = "0.53.2", features = ["async-std", "kad", "identify", "request-response", "cbor", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux"] }
libp2p-quic = { version = "0.10.2", features = ["async-std"] }

num_enum = "0.6.1"
clap = { version = "4.3.21", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = "0.11"
home = "0.5.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3.3"
anyhow = "1.0.86"
bit-vec = { version = "0.8.0", features = ["serde"] }
rand = "0.8.5"
base64 = "0.22.1"

risc0-zkvm = { version = "1.2", features = ["prove"] }
risc0-zkp = { version = "1.2", features = ["prove"] }
risc0-circuit-recursion = "1.2"

comms = { path = "../comms" }
dstorage = { path = "../dstorage" }
chrono = { version = "0.4.38", features = ["serde"] }

