[workspace]
members = [    
    "zkvm",
    "bin"
]
exclude = []
resolver = "2"

[profile.release-with-debug]
inherits = "release"
debug-assertions = true
debug = true

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.7"
futures = "0.3.28"
futures-util = "0.3.29"
env_logger = "0.10.0"
log = "0.4.25"
libp2p = { version = "0.53.2", features = ["tokio", "kad", "identify", "request-response", "cbor", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux"] }
libp2p-quic = { version = "0.10.2", features = ["tokio"] }
clap = { version = "4.3.21", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
bincode = "1.3.3"
anyhow = "1.0.86"
rand = "0.8.5"
mongodb = "3.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = "1.45.1"
tokio-stream = "0.1.17"

peyk = { path = "../peyk" }
anbar = { path = "../anbar" }

