[package]
name = "zkvm"
version.workspace = true
edition.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
bincode.workspace = true
anyhow.workspace = true
tokio.workspace = true

# sp1
sp1-sdk = { version = "5.1.2", default-features = false, features = ["cuda"] }

peyk.workspace = true
